// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NavigatorContent /> should render the logo 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <NavigatorContent
    routePattern="/"
  >
    <Logo>
      <img
        alt="Shopgate Connect"
        className={
          Object {
            "data-css-bqj31d": "",
          }
        }
        src="https://example.com/logo"
      />
    </Logo>
    <_default>
      <Consumer>
        <NavigatorSearch
          active={false}
          query=""
          setSearchQuery={[MockFunction]}
          toggleSearchField={[MockFunction]}
        >
          <Transition
            appear={false}
            enter={true}
            exit={true}
            in={false}
            mountOnEnter={false}
            onEnter={[Function]}
            onEntered={[Function]}
            onEntering={[Function]}
            onExit={[Function]}
            onExited={[Function]}
            onExiting={[Function]}
            timeout={150}
            unmountOnExit={false}
          >
            <form
              className="css-15xpwm2"
              data-test-id="Search"
              onSubmit={[Function]}
              style={
                Object {
                  "transform": "translate3d(100vw, 0, 0)",
                }
              }
            >
              <input
                className="css-1obolt5"
                onChange={[Function]}
                onFocus={[Function]}
                placeholder="search.placeholder"
                type="search"
                value=""
              />
              <div
                aria-hidden={true}
                className="css-lvd6ix"
                onClick={[Function]}
                role="button"
              />
            </form>
          </Transition>
        </NavigatorSearch>
      </Consumer>
    </_default>
  </NavigatorContent>
</Provider>
`;

exports[`<NavigatorContent /> should render the title 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <NavigatorContent
    routePattern="some/other/path"
  >
    <Connect(Title)>
      <Title
        dispatch={[Function]}
        onClick={[Function]}
        title="test"
      >
        <div
          aria-hidden={true}
          onClick={[Function]}
        >
          <div
            className="css-iykibm "
          >
            <Translate
              className=""
              params={Object {}}
              string=""
            />
          </div>
          <div
            className="css-iykibm "
            data-test-id="title: test"
          >
            <Translate
              className=""
              params={Object {}}
              string="test"
            >
              <span
                className=""
              >
                test
              </span>
            </Translate>
          </div>
        </div>
      </Title>
    </Connect(Title)>
    <_default>
      <Consumer>
        <NavigatorSearch
          active={false}
          query=""
          setSearchQuery={[MockFunction]}
          toggleSearchField={[MockFunction]}
        >
          <Transition
            appear={false}
            enter={true}
            exit={true}
            in={false}
            mountOnEnter={false}
            onEnter={[Function]}
            onEntered={[Function]}
            onEntering={[Function]}
            onExit={[Function]}
            onExited={[Function]}
            onExiting={[Function]}
            timeout={150}
            unmountOnExit={false}
          >
            <form
              className="css-15xpwm2"
              data-test-id="Search"
              onSubmit={[Function]}
              style={
                Object {
                  "transform": "translate3d(100vw, 0, 0)",
                }
              }
            >
              <input
                className="css-1obolt5"
                onChange={[Function]}
                onFocus={[Function]}
                placeholder="search.placeholder"
                type="search"
                value=""
              />
              <div
                aria-hidden={true}
                className="css-lvd6ix"
                onClick={[Function]}
                role="button"
              />
            </form>
          </Transition>
        </NavigatorSearch>
      </Consumer>
    </_default>
  </NavigatorContent>
</Provider>
`;
